--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <groupId>org.tomdz.twirl</groupId>
   <artifactId>twirl-api</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.2-SNAPSHOT</version>
+  <version>1.0.2</version>
   <url>http://www.tomdz.org</url>
   <name>twirl-api</name>
   <description>Redistributable portion of the Play Framework Scala template engine</description>
@@ -31,7 +31,7 @@
     <connection>scm:git:git://github.com/tomdz/twirl-api.git</connection>
     <developerConnection>scm:git:git@github.com:tomdz/twirl-api.git</developerConnection>
     <url>http://github.com/tomdz/twirl-api/tree/master</url>
-    <tag>HEAD</tag>
+    <tag>twirl-api-1.0.2</tag>
   </scm>
   <distributionManagement>
     <snapshotRepository>
